# open-blog

./: .gitignore
my_blog/: README.md  package-lock.json  package.json
my_blog/src/: index.html
my_blog/src/app/: app.component.ts  app.module.ts
my_blog/src/app/components/admin-dashboard/: admin-dashboard.component.html  admin-dashboard.component.ts
my_blog/src/app/components/home-page/: home-page.component.html  home-page.component.ts
my_blog/src/app/components/navigation/: navigation.component.html  navigation.component.ts
my_blog/src/app/components/post-editor/: post-editor.component.html  post-editor.component.ts  post-editor.module.ts
my_blog/src/app/components/post-modify/: post-modify.component.html  post-modify.component.ts
my_blog/src/app/components/posts/: posts.component.html  posts.component.ts
my_blog/src/app/components/profile-page/: profile-page.component.html  profile-page.component.ts
my_blog/src/app/guards/: admin.guard.ts  user.guard.ts
my_blog/src/app/models/: post.model.ts  user.model.ts
my_blog/src/app/services/: post.service.ts  translation.pipe.ts  translation.service.ts  user.service.ts
my_blog/src/assets/i18n/: en.json  pt.json
server/: CMakeLists.txt  main.cpp
server/config/: config.h
server/controllers/: auth_controller.h  post_controller.h  user_controller.h
server/middleware/: auth_middleware.h
server/models/: db.h  post_model.h  user_model.h
server/routes/: api.h  auth_routes.h  post_routes.h  user_routes.h
server/sql/: schema.sql
server/utils/: jwt_utils.cpp  jwt_utils.h  password_utils.cpp  password_utils.h  validation.h
(+8 files in other folders)
